# EdgeInfer

./: .gitignore  CMakeLists.txt  README.md  aihub_profile.py  requirements.txt  run_benchmark.py
cpp/: stub.cpp
results/: qai_hub_results.json  qai_hub_results.txt  results.json
src/: benchmarker.py  model_loader.py  profiler.py  visualizer.py
